--- a/src/pages/overview.mdx
+++ b/src/pages/overview.mdx
@@ -97,77 +97,24 @@ VeraId Authority provides workflows for:
 
 [Letro](https://letro.app/en/) is an offline-compatible email alternative that uses VeraId for secure authentication. It serves as a practical demonstration of VeraId's capabilities in a real-world application:
 
-**Account Creation:**
-When a user creates a Letro account:
+- **Offline, user-friendly authentication:** Letro leverages VeraId to enable users to use their own domain names, or [get free identifiers](https://docs.relaycorp.tech/letro-server/account-creation) from domains like `cuppa.fans` (UK English) or `applepie.rocks` (US English). Either way, the user obtains a member id bundle that can be used to sign messages offline.
+- **Contact pairing:** Because Letro requires consent from both parties before they can begin to message each other, it implements a [contact pairing protocol](https://docs.relaycorp.tech/letro-server/contact-pairing). This protocol leverages VeraId to enable users to verify each other's identity offline, thus ensuring they're talking to the right person.
 
-1. A new member certificate is issued for the user by their organisation.
-2. A Member ID Bundle is generated including the DNSSEC chain, organisation certificate, and member certificate.
-3. This bundle is stored securely and used for signing messages.
-
-**Contact Pairing:**
-When Letro users connect:
-
-1. They exchange their Member ID Bundles.
-2. Each user can verify the other's identity using the DNSSEC chain, without requiring Internet connectivity.
-3. Subsequent messages are signed using VeraId, enabling recipients to verify the sender's identity offline.
-
-This integration showcases VeraId's ability to provide secure, offline-compatible authentication in a messaging application, protecting users from impersonation and phishing attempts.
+Note that Letro uses member signatures, rather than organisation signatures, so that users can sign messages offline.
 
 ## Security Considerations
 
-VeraId's security model comes with specific considerations that implementers should be aware of:
+VeraId's security model comes with several important considerations that operators and service designers should be aware of:
 
-**DNSSEC Dependency and Trust Assumptions:**
+1. **DNSSEC Dependency and Trust Assumptions:** VeraId inherits trust from the DNSSEC root zone, which means the security of the entire system depends on the integrity of this foundation. A compromise of the root DNSSEC zone would undermine the entire system. Additionally, a malicious TLD operator could theoretically issue fraudulent DNSSEC responses, potentially compromising domains under their control.
+2. **Homographic Attacks and Character Encoding Issues:** Different Unicode characters that appear visually similar can be used for spoofing attacks. Implementations should detect and warn about mixed-script identifiers to mitigate this risk. User interfaces should display domain names in Punycode when they contain non-ASCII characters to make potentially deceptive domains more apparent to users.
+3. **Domain Ownership Changes:** Organisations should delay implementing VeraId until at least the maximum TTL (30 days) after acquiring a domain to ensure previous owners cannot interfere with the setup. It's important to note that signatures created before a domain transfer remain cryptographically valid, which could potentially lead to confusion or misattribution.
+4. **Offline Verification Limitations:** The offline verification capability comes with inherent constraints. Accurate verification requires a correct system time on the verifying device. Valid signatures can be replayed beyond their intended context if not properly constrained by the application. The protocol relies on short validity periods rather than revocation checking, which means compromised keys remain valid until their certificates expire.
+5. **Organisation Signatures and Member Attribution:** Whilst member signatures provide cryptographic proof of authorship, organisation signatures only provide a claim by the organisation about who created the content. Malicious or compromised organisations could falsely attribute content to members when using organisation signatures. Where relevant, user interfaces should clearly distinguish between these signature types to avoid confusion.
+6. **TTL Considerations:** The protocol favours short-lived certificates over complex revocation mechanisms for simplicity and offline compatibility. VeraId requires a minimum TTL of 8 hours and a maximum of 30 days to balance security and usability. Service designers should specify the shortest TTL that satisfies their requirements to minimise the window of vulnerability in case of key compromise.
 
-- VeraId inherits trust from the DNSSEC root zone.
-- Compromise of the root KSK would undermine the entire system.
-- A malicious TLD operator could theoretically issue fraudulent DNSSEC responses.
-- Implementations should use well-tested, actively maintained DNSSEC libraries.
-
-**Homographic Attacks and Character Encoding Issues:**
-
-- Different Unicode characters that appear visually similar can be used for spoofing.
-- Implementations should detect and warn about mixed-script identifiers.
-- User interfaces should display domain names in Punycode when they contain non-ASCII characters.
-- Normalisation of identifiers is important for consistent handling.
-
-**Domain Ownership Changes:**
-
-- Organisations should delay implementing VeraId until at least the maximum TTL (30 days) after acquiring a domain.
-- Signatures created before a domain transfer remain cryptographically valid.
-- Verifiers may implement additional checks for recent domain transfers.
-
-**Offline Verification Limitations:**
-
-- Accurate verification requires correct system time.
-- Valid signatures can be replayed beyond their intended context.
-- The protocol relies on short validity periods rather than revocation checking.
-- Applications requiring strong freshness guarantees should use additional mechanisms.
-
-**Organisation Signatures and Member Attribution:**
-
-- Member signatures provide cryptographic proof of authorship, whilst organisation signatures only provide a claim by the organisation.
-- Malicious or compromised organisations could falsely attribute content to members.
-- User interfaces should clearly distinguish between these signature types.
-- Implementations should prefer member signatures when practical.
-
-**TTL Considerations:**
-
-- Short-lived certificates are preferred over complex revocation mechanisms.
-- The protocol requires a minimum TTL of 8 hours and a maximum of 30 days.
-- Service designers should specify the shortest TTL that satisfies their requirements.
-
-## Resources
-
-**Reference Implementations:**
-
-- JavaScript/TypeScript: [`@relaycorp/veraid`](https://github.com/relaycorp/veraid-js).
-- Kotlin/JVM: [`tech.relaycorp:veraid`](https://github.com/relaycorp/veraid-jvm).
-- VeraId Authority: [GitHub repository](https://github.com/relaycorp/veraid-authority).
-- VeraId Authority Client: [npm package](https://github.com/relaycorp/veraid-authority-js).
-
-**Documentation and Specifications:**
+## Additional Resources
 
 - [VeraId V1 Specification](/spec): Complete technical specification.
-- [VeraId Authority Documentation](https://docs.relaycorp.tech/veraid-authority/): Guide to running the Authority server.
 - [Prior Art Analysis](/prior-art): Comparison with alternative technologies.
+- [VeraId Authority Documentation](https://docs.relaycorp.tech/veraid-authority/): Guide to running the Authority server.
