Update resource links in overview page
Refine link text and formatting for VeraId resources to improve clarity and consistency

--- a/src/pages/overview.mdx
+++ b/src/pages/overview.mdx
@@ -107,6 +107,6 @@ VeraId's security model comes with several important considerations that operato
 
 ## Additional Resources
 
-- [VeraId V1 Specification](/spec): Complete technical specification.
-- [Prior Art Analysis](/prior-art): Comparison with alternative technologies.
-- [VeraId Authority Documentation](https://docs.relaycorp.tech/veraid-authority/): Guide to running the Authority server.
+- [VeraId v1 specification](/spec): Complete technical specification.
+- [Prior Art](/prior-art): Comparison with alternative technologies.
+- [VeraId Authority](https://docs.relaycorp.tech/veraid-authority/): Guide to running the Authority server.
