--- a/src/pages/overview.mdx
+++ b/src/pages/overview.mdx
@@ -107,6 +107,6 @@ VeraId's security model comes with several important considerations that operato
 
 ## Additional Resources
 
+- [VeraId JavaScript demo](/demo): Simple demo to produce and verify VeraId signatures with your own domain name.
 - [VeraId v1 specification](/spec): Complete technical specification.
-- [Prior Art](/prior-art): Comparison with alternative technologies.
 - [VeraId Authority](https://docs.relaycorp.tech/veraid-authority/): Guide to running the Authority server.
