--- a/src/pages/overview.mdx
+++ b/src/pages/overview.mdx
@@ -100,10 +100,10 @@ VeraId's security model comes with several important considerations that operato
 
 1. **DNSSEC Dependency and Trust Assumptions:** VeraId inherits trust from the DNSSEC root zone, which means the security of the entire system depends on the integrity of this foundation. A compromise of the root DNSSEC zone would undermine the entire system. Additionally, a malicious TLD operator could theoretically issue fraudulent DNSSEC responses, potentially compromising domains under their control.
 2. **Homographic Attacks and Character Encoding Issues:** Different Unicode characters that appear visually similar can be used for spoofing attacks. Implementations should detect and warn about mixed-script identifiers to mitigate this risk. User interfaces should display domain names in Punycode when they contain non-ASCII characters to make potentially deceptive domains more apparent to users.
-3. **Domain Ownership Changes:** Organisations should delay implementing VeraId until at least the maximum TTL (30 days) after acquiring a domain to ensure previous owners cannot interfere with the setup. It's important to note that signatures created before a domain transfer remain cryptographically valid, which could potentially lead to confusion or misattribution.
+3. **Domain Ownership Changes:** Organisations should delay implementing VeraId until at least the maximum TTL (90 days) after acquiring a domain to ensure previous owners cannot interfere with the setup. It's important to note that signatures created before a domain transfer remain cryptographically valid, which could potentially lead to confusion or misattribution.
 4. **Offline Verification Limitations:** The offline verification capability comes with inherent constraints. Accurate verification requires a correct system time on the verifying device. Valid signatures can be replayed beyond their intended context if not properly constrained by the application. The protocol relies on short validity periods rather than revocation checking, which means compromised keys remain valid until their certificates expire.
 5. **Organisation Signatures and Member Attribution:** Whilst member signatures provide cryptographic proof of authorship, organisation signatures only provide a claim by the organisation about who created the content. Malicious or compromised organisations could falsely attribute content to members when using organisation signatures. Where relevant, user interfaces should clearly distinguish between these signature types to avoid confusion.
-6. **TTL Considerations:** The protocol favours short-lived certificates over complex revocation mechanisms for simplicity and offline compatibility. VeraId requires a minimum TTL of 8 hours and a maximum of 30 days to balance security and usability. Service designers should specify the shortest TTL that satisfies their requirements to minimise the window of vulnerability in case of key compromise.
+6. **TTL Considerations:** The protocol favours short-lived certificates over complex revocation mechanisms for simplicity and offline compatibility. VeraId requires a minimum TTL of 1 second and a maximum of 90 days to balance security and usability. Service designers should specify the shortest TTL that satisfies their requirements to minimise the window of vulnerability in case of key compromise.
 
 ## Additional Resources
 
