--- a/src/pages/kliento/demo.mdx
+++ b/src/pages/kliento/demo.mdx
@@ -79,7 +79,7 @@ We're going to deploy it in a Docker container, so create the `Dockerfile` file 
 FROM node:22.14.0-slim
 WORKDIR /opt/kliento-server
 COPY . ./
-RUN npm ci
+RUN npm install
 CMD ["node", "server.js"]
 EXPOSE 3000
 ```
@@ -132,7 +132,7 @@ services:
         condition: service_healthy
 
   mock-authz-server:
-    image: ghcr.io/navikt/mock-oauth2-server:0.5.8
+    image: ghcr.io/navikt/mock-oauth2-server:2.1.10
     ports:
       - "127.0.0.1:8081:8080"
     environment:
@@ -144,14 +144,17 @@ services:
               "tokenExpiry": 3600,
               "requestMappings": [
                 {
-                  "requestParam": "scope",
+                  "requestParam": "client_id",
                   "match": "super-admin",
                   "claims": {"email": "admin@veraid.example"}
                 },
                 {
-                  "requestParam": "scope",
-                  "match": "user",
-                  "claims": {"email": "machine@cloud-provider.example"}
+                  "requestParam": "client_id",
+                  "match": "workload",
+                  "claims": {
+                    "email": "machine@cloud-provider.example",
+                    "aud": "$${audience}"
+                  }
                 }
               ]
             }
@@ -207,9 +210,8 @@ export SUPER_ADMIN_TOKEN=$(curl --request POST \
   --url http://localhost:8081/default/token \
   --header 'Content-Type: application/x-www-form-urlencoded' \
   --data-urlencode grant_type=client_credentials \
-  --data-urlencode client_id=admin@veraid.example \
+  --data-urlencode client_id=super-admin \
   --data-urlencode client_secret=s3cr3t \
-  --data-urlencode scope=super-admin \
   --silent \
   | jq -r .access_token)
 ```
@@ -323,11 +325,12 @@ First, obtain a JWT from the mock OAuth2 server:
 ```bash
 export EXCHANGE_JWT=$(curl --request POST \
   --url "http://localhost:8081/default/token" \
+  --header "Host: mock-authz-server:8080" \
   --header 'Content-Type: application/x-www-form-urlencoded' \
   --data-urlencode grant_type=client_credentials \
-  --data-urlencode client_id=machine@cloud-provider.example \
+  --data-urlencode client_id=workload \
   --data-urlencode client_secret=s3cr3t \
-  --data-urlencode scope=user \
+  --data-urlencode "audience=$EXCHANGE_URL" \
   --silent \
   | jq -r .access_token)
 ```
@@ -346,7 +349,7 @@ And finally, make a request to the server using the token bundle:
 ```bash
 curl --request GET \
   --url "http://localhost:8082/" \
-  --header "Authorization: Bearer $TOKEN_BUNDLE"
+  --header "Authorization: Kliento $TOKEN_BUNDLE"
 ```
 
 The response should report the client's identifier: `user@your-domain.com` or simply `your-domain.com` if you created a bot.
