Kliento: minor tweaks

--- a/src/pages/kliento/demo.mdx
+++ b/src/pages/kliento/demo.mdx
@@ -27,7 +27,7 @@ Lastly, we'll be creating new files, which you may want to do in a new temporary
 
 ## 1. Enable DNSSEC on your domain
 
-You can skip this step if you're using a domain name that is already DNSSEC-enabled.
+Skip this step if you're using a domain name that is already DNSSEC-enabled.
 
 If your DNS hosting provider is the same as your registrar, the process may be as straightforward as ticking a box to enable DNSSEC. Otherwise, you'll have to copy the DNSSEC configuration from your DNS hosting provider (e.g. Cloudflare) to your registrar (e.g. GoDaddy). Either way, the process is entirely provider-specific, so we recommend you consult the relevant documentation if it isn't obvious.
 
