Publish draft of security audit

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,6 +11,12 @@ VeraId is led by [Relaycorp](https://relaycorp.tech/), a company on a mission to
 
 The word _vera_ is [Ido](https://www.idolinguo.org.uk/general.htm) for _authentic_, and it's pronounced VEH-rah (with a trilled R).
 
+## Security audit
+
+VeraId underwent an independent security audit by [Radically Open Security](https://www.radicallyopensecurity.com) in early 2025, commissioned by the Open Technology Fund.
+
+[Read **draft** report](/archives/security-audit-2025.pdf) (final version will be published by the end of April 2025).
+
 ## Community
 
 [r/VeraId](https://www.reddit.com/r/VeraId/) on Reddit is the best place to participate in the VeraId community, and stay up to date with the latest news and developments.
