Publish final version of security assessment report

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -15,7 +15,7 @@ The word _vera_ is [Ido](https://www.idolinguo.org.uk/general.htm) for _authenti
 
 VeraId underwent an independent security audit by [Radically Open Security](https://www.radicallyopensecurity.com) in early 2025, commissioned by the Open Technology Fund.
 
-[Read **draft** report](/archives/security-audit-2025.pdf) (final version will be published by the end of April 2025).
+[Read the report](/archives/security-audit-2025.pdf).
 
 ## Community
 
